# cmake_demo

./: .gitignore  CMakeLists.txt  License.txt  README.md  config.h.in  main.cc
mathlib/: CMakeLists.txt  mathlib.cc  mathlib.h
